--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.20"
+        "mysql2": "^2.3.3",
+        "nodemon": "^2.0.20",
+        "sequelize": "^6.25.6"
     }
 }
